--- a/displayAllProducts.html
+++ b/displayAllProducts.html
@@ -9,6 +9,16 @@
 
 </head>
 <body class="bg-gray-100 font-sans leading-normal tracking-normal">
+
+    <header class="bg-yellow-300">
+        <nav>
+            <div class="flex justify-around">
+                <p class="p-4">Login and Sign Up</p>
+                <button class="rounded-xl border bg-green-300 p-4">Login</button>
+                <button class="rounded-xl border bg-green-300 p-4">Sign Up</button>
+            </div>
+        </nav>
+    </header>
     <div class="container mx-auto p-3 ">
         
 
