--- a/displayAllProducts.html
+++ b/displayAllProducts.html
@@ -7,18 +7,55 @@
     <!-- Tailwind CSS CDN -->
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 
+    <style>
+        .theme-yellow {
+            background-color: #f6c700;
+            color: #1a202c;
+        }
+        
+    </style>
 </head>
 <body class="bg-gray-100 font-sans leading-normal tracking-normal">
 
-    <header class="bg-yellow-300">
-        <nav>
-            <div class="flex justify-around">
-                <p class="p-4">Login and Sign Up</p>
-                <button class="rounded-xl border bg-green-300 p-4">Login</button>
-                <button class="rounded-xl border bg-green-300 p-4">Sign Up</button>
+    <nav class="theme-yellow shadow-md">
+        <div class="container mx-auto px-4">
+            <div class="flex justify-between items-center py-4">
+                <div class="text-xl font-bold">
+                    E-commerce
+                </div>
+                <div class="hidden md:flex space-x-4">
+                    <a href="#" class="hover:text-gray-800">Home</a>
+                    <a href="#" class="hover:text-gray-800">Shop</a>
+                    <a href="#" class="hover:text-gray-800">Contact</a>
+                    <a href="#" class="hover:text-gray-800">About</a>
+                </div>
+                <div class="hidden md:flex">
+                    <a href="loginSignUp.html" class="ml-4 hover:text-gray-800"><button class="hover:bg-red-500 rounded p-2 bg-yellow-500">Login/SignUp</button></a>
+                </div>
+                <div class="md:hidden">
+                    <button id="menu-button" class="focus:outline-none">
+                        <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
+                        </svg>
+                    </button>
+                </div>
             </div>
-        </nav>
-    </header>
+        </div>
+        <div id="menu" class="md:hidden hidden">
+            <a href="#" class="block px-4 py-2">Home</a>
+            <a href="#" class="block px-4 py-2">Shop</a>
+            <a href="#" class="block px-4 py-2">Contact</a>
+            <a href="#" class="block px-4 py-2">About</a>
+            <a href="#login" class="block px-4 py-2">Login</a>
+            <a href="#signup" class="block px-4 py-2">Sign Up</a>
+        </div>
+    </nav>
+
+    <script>
+        document.getElementById('menu-button').addEventListener('click', function () {
+            document.getElementById('menu').classList.toggle('hidden');
+        });
+    </script>
     <div class="container mx-auto p-3 ">
         
 
