--- a/loginSignUp.html
+++ b/loginSignUp.html
@@ -25,16 +25,15 @@
         <div class="container mx-auto px-4">
             <div class="flex justify-between items-center py-4">
                 <div class="text-xl font-bold">
-                    E-commerce
+                    Buy And Sell
                 </div>
                 <div class="hidden md:flex space-x-4">
-                    <a href="#" class="hover:text-gray-800">Home</a>
-                    <a href="#" class="hover:text-gray-800">Shop</a>
-                    <a href="#" class="hover:text-gray-800">Contact</a>
-                    <a href="#" class="hover:text-gray-800">About</a>
+                    <a href="index.html" class="hover:text-gray-800 font-semibold">Home</a>
+                    <a href="#" class="hover:text-gray-800 font-semibold">Contact</a>
+                    <a href="#" class="hover:text-gray-800 font-semibold">About</a>
                 </div>
                 <div class="hidden md:flex">
-                    <a href="loginSignUp.html" class="ml-4 hover:text-gray-800"><button class="hover:bg-red-500 rounded p-2 bg-yellow-500">Login/SignUp</button></a>
+                    <a href="loginSignUp.html" class="ml-4 hover:text-gray-800 font-semibold"><button class="hover:bg-red-500 rounded p-2 bg-yellow-500">Login/SignUp</button></a>
                 </div>
                 <div class="md:hidden">
                     <button id="menu-button" class="focus:outline-none">
@@ -46,17 +45,16 @@
             </div>
         </div>
         <div id="menu" class="md:hidden hidden">
-            <a href="#" class="block px-4 py-2">Home</a>
-            <a href="#" class="block px-4 py-2">Shop</a>
-            <a href="#" class="block px-4 py-2">Contact</a>
-            <a href="#" class="block px-4 py-2">About</a>
-            <a href="#login" class="block px-4 py-2">Login</a>
-            <a href="#signup" class="block px-4 py-2">Sign Up</a>
+            <a href="index.html" class="block px-4 py-2 hover:bg-green-400 font-semibold">Home</a>
+            <a href="#" class="block px-4 py-2 hover:bg-green-400 font-semibold">Contact</a>
+            <a href="#" class="block px-4 py-2 hover:bg-green-400 font-semibold">About</a>
+            <a href="loginSignUp.html" class="block px-4 py-2 hover:bg-green-400 font-semibold">Login/Sign Up</a>
         </div>
     </nav>
 
     <!-- Main Content -->
     <div class="container mx-auto px-4 py-12">
+        <div class="text-center p-6 text-2xl font-mono">Create a account to use our Buying and Selling Services.</div>
         <div class="flex justify-center">
             <div class="w-full max-w-md bg-white rounded-lg shadow-md">
                 <!-- Tabs -->
