--- a/productPage.html
+++ b/productPage.html
@@ -36,16 +36,15 @@
         <div class="container mx-auto px-4">
             <div class="flex justify-between items-center py-4">
                 <div class="text-xl font-bold">
-                    E-commerce
+                    Buy And Sell
                 </div>
                 <div class="hidden md:flex space-x-4">
-                    <a href="#" class="hover:text-gray-800">Home</a>
-                    <a href="#" class="hover:text-gray-800">Shop</a>
-                    <a href="#" class="hover:text-gray-800">Contact</a>
-                    <a href="#" class="hover:text-gray-800">About</a>
+                    <a href="index.html" class="hover:text-gray-800 font-semibold">Home</a>
+                    <a href="#" class="hover:text-gray-800 font-semibold">Contact</a>
+                    <a href="#" class="hover:text-gray-800 font-semibold">About</a>
                 </div>
                 <div class="hidden md:flex">
-                    <a href="loginSignUp.html" class="ml-4 hover:text-gray-800"><button class="hover:bg-red-500 rounded p-2 bg-yellow-500">Login/SignUp</button></a>
+                    <a href="loginSignUp.html" class="ml-4 hover:text-gray-800 font-semibold"><button class="hover:bg-red-500 rounded p-2 bg-yellow-500">Login/SignUp</button></a>
                 </div>
                 <div class="md:hidden">
                     <button id="menu-button" class="focus:outline-none">
@@ -57,12 +56,10 @@
             </div>
         </div>
         <div id="menu" class="md:hidden hidden">
-            <a href="#" class="block px-4 py-2">Home</a>
-            <a href="#" class="block px-4 py-2">Shop</a>
-            <a href="#" class="block px-4 py-2">Contact</a>
-            <a href="#" class="block px-4 py-2">About</a>
-            <a href="#login" class="block px-4 py-2">Login</a>
-            <a href="#signup" class="block px-4 py-2">Sign Up</a>
+            <a href="index.html" class="block px-4 py-2 hover:bg-green-400 font-semibold">Home</a>
+            <a href="#" class="block px-4 py-2 hover:bg-green-400 font-semibold">Contact</a>
+            <a href="#" class="block px-4 py-2 hover:bg-green-400 font-semibold">About</a>
+            <a href="loginSignUp.html" class="block px-4 py-2 hover:bg-green-400 font-semibold">Login/Sign Up</a>
         </div>
     </nav>
 
@@ -136,7 +133,7 @@
                         <p class="text-lg text-gray-800"><span class="font-bold">Quantity Left :</span> <span class="font-normal">${product.quantity}</span></p>
                         <p class="text-lg text-gray-800"><span class="font-bold">Seller's Name :</span> <span class="font-normal">${product.seller}</span></p>
                         <p class="text-gray-700 mb-4"><span class="font-bold">Description :</span> <span class="font-normal">${product.description}</span></p>
-                        <button class="mt-4 bg-yellow-500 text-white p-4 rounded-lg font-semibold hover:bg-yellow-600 transition-colors duration-300 ease-in-out" onclick="openDialog()">Buy Now</button>
+                        <a href="loginSignUp.html"><button class="mt-4 bg-yellow-500 text-white p-4 rounded-lg font-semibold hover:bg-yellow-600 transition-colors duration-300 ease-in-out">Buy Now</button></a>
                     `;
                 } else {
                     console.error('No such product!');
@@ -213,11 +210,6 @@
                     alert('Failed to place order. Please try again.');
                 }
         
-
-
-
-
-
         });
         
 
