--- a/contactUs.html
+++ b/contactUs.html
@@ -11,7 +11,7 @@
     <div class="bg-white p-8 rounded-lg shadow-md w-full max-w-md">
         <h2 class="text-2xl font-semibold text-gray-800 mb-6 text-center">Contact Us</h2>
 
-        <form action="#" method="POST" class="space-y-4">
+        <form id="contactForm" class="space-y-4">
             <div>
                 <label for="name" class="block text-gray-700 font-medium">Name</label>
                 <input type="text" id="name" name="name" required 
@@ -36,25 +36,6 @@
                     class="w-full mt-1 px-4 py-2 border border-gray-300 rounded-lg shadow-sm focus:ring focus:ring-blue-200 focus:border-blue-400"></textarea>
             </div>
 
-            <div>
-                <label class="block text-gray-700 font-medium">Rating</label>
-                <div class="flex items-center space-x-2 mt-1">
-                    <input type="radio" id="star1" name="rating" value="1" required>
-                    <label for="star1" class="text-yellow-500">&#9733;</label>
-
-                    <input type="radio" id="star2" name="rating" value="2" required>
-                    <label for="star2" class="text-yellow-500">&#9733;</label>
-
-                    <input type="radio" id="star3" name="rating" value="3" required>
-                    <label for="star3" class="text-yellow-500">&#9733;</label>
-
-                    <input type="radio" id="star4" name="rating" value="4" required>
-                    <label for="star4" class="text-yellow-500">&#9733;</label>
-
-                    <input type="radio" id="star5" name="rating" value="5" required>
-                    <label for="star5" class="text-yellow-500">&#9733;</label>
-                </div>
-            </div>
 
             <div>
                 <button type="submit" 
@@ -64,6 +45,34 @@
             </div>
         </form>
     </div>
+
+    <script>
+
+        document.getElementById('contactForm').addEventListener('submit',async function(e){
+      
+
+
+            const subject = "Feedback From : " + localStorage.getItem('userEmail');
+                const body = `<h3>New Feed Back from ${localStorage.getItem('userEmail')}</h3>
+                <p>Name : ${document.getElementById("name").value}</p>
+                <p>FeedBack : ${document.getElementById("feedback").value}</p>
+                `;
+
+                const response = await fetch('https://otp-server-indol.vercel.app/api/send-otp', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify({ email: 'nikhil.beldar@xaviers.edu.in', subject: subject, body: body })
+                });
+
+
+
+            alert("Submitted");
+            
+
+        })
+    </script>
 
 </body>
 </html>
