--- a/marketProdPage.html
+++ b/marketProdPage.html
@@ -60,7 +60,9 @@
                 </div>
                 <div class="hidden md:flex space-x-4">
                     <a href="index.html" class="hover:text-gray-800 font-semibold">Home</a>
-                    <a href="#" class="hover:text-gray-800 font-semibold">Contact</a>
+                    <a href="store.html" class="hover:text-gray-800 font-semibold">Store</a>
+                    <a href="market.html" class="hover:text-gray-800 font-semibold">Market Place</a>
+                    
                     <a href="contactUs.html" class="hover:text-gray-800 font-semibold">Contact Us</a>
                 </div>
                 <div class="hidden md:flex">
@@ -77,8 +79,9 @@
         </div>
         <div id="menu" class="md:hidden hidden">
             <a href="index.html" class="block px-4 py-2 hover:bg-green-400 font-semibold">Home</a>
+            <a href="store.html" class="block px-4 py-2 hover:bg-green-400 font-semibold">Store</a>
+            <a href="market.html" class="block px-4 py-2 hover:bg-green-400 font-semibold">Market Place</a>
             <a href="#" class="block px-4 py-2 hover:bg-green-400 font-semibold">Contact</a>
-            <a href="contactUs.html" class="block px-4 py-2 hover:bg-green-400 font-semibold">Contact Us</a>
             <a href="loginSignUp.html" class="block px-4 py-2 hover:bg-green-400 font-semibold">Login/Sign Up</a>
         </div>
     </nav>
@@ -145,7 +148,7 @@
             var productDetails = document.getElementById('productDetails');
             productDetails.innerHTML = '';
 
-            firebase.firestore().collection('products').doc(productId).get().then((doc) => {
+            firebase.firestore().collection('usedProducts').doc(productId).get().then((doc) => {
 
                 document.getElementById('loading').style.display = 'none';
                 document.getElementById('productDetails').style.display = 'block';
@@ -156,6 +159,7 @@
                         <img src="${product.imageUrl}" alt="${product.name}" class="w-full h-96 object-contain mb-4">
                         <p class="text-lg text-gray-800"><span class="font-bold">Price :</span> <span class="font-normal">₹${product.price}</span></p>
                         <p class="text-lg text-gray-800"><span class="font-bold">Quantity Left :</span> <span class="font-normal">${product.quantity}</span></p>
+                        <p class="text-lg text-gray-800"><span class="font-bold">Seller's Name :</span> <span class="font-normal">${product.seller}</span></p>
                         <p class="text-gray-700 mb-4"><span class="font-bold">Description :</span> <span class="font-normal">${product.description}</span></p>
                         <div class='flex justify-between'>
                             ${product.quantity > 0 ? `
